togeser calc and users
